# Barnes-Focus

./: .babelrc  .ebignore  .gitignore  03_yarn.config  Gemfile  LICENSE  Procfile  README.md  cron.yaml  deployment.md  package-lock.json  package.json  troubleshooting.md
.ebextension/: packages.config
.ebextensions/: 00_bundler_ver.config  00_db_migration.config  00_install_yarn.config  00_ngnix.config  00_node_modules.config  00_yarn.config  01_db_migration.config  01_nginx.config  01_node.config  01_yarn.config  02_nginx_proxy.config  03_yarn.config  04_container_commands.config  04_delayed_job.sh  05_cron.sh  05_rm_cplusplus.config  06_delayed_job.sh  08_yarn.config  envvars.config  packages.config  yarn.config
app/admin/: album.rb  dashboard.rb  dashboard_new.rb  snap_search_result.rb  translations.rb
app/controllers/: application_controller.rb  background_jobs_controller.rb  jobs_controller.rb  pages_controller.rb
app/helpers/: application_helper.rb
app/jobs/: image_upload_job.rb  import_scanned_sessions_job.rb  insert_es_records_job.rb  subscribe_to_newsletter_job.rb
app/mailers/: application_mailer.rb  bookmark_notifier_mailer.rb  user_mailer.rb
app/models/: album.rb  bookmark.rb  es_cached_record.rb  photo.rb  snap_search_result.rb  story.rb  subscription.rb  training_record.rb  (+1 more)
config/: application.rb  cable.yml  database.yml  puma.rb  routes.rb  schedule.rb  secrets.yml  webpacker.yml
db/: schema.rb  seeds.rb
lib/: barnes_elastic_search.rb  cuda_sift.rb  google_translate.rb  graph_cms.rb  image.rb  pastec.rb  s3_store.rb  scannedSessions.rb  script.rb  snap_translator.rb  story_fetcher.rb
lib/cplusplus/CudaSurfMatcher/: .gitignore  2D-Paintings-Small.csv  CMakeLists.txt  README.md  assets_downloader.rb  monit.config  remote-build.sh  run  test-runs.md  test_run.rb
lib/cplusplus/CudaSurfMatcher/CMakeModules/: FindMHD.cmake
lib/cplusplus/CudaSurfMatcher/include/: cudasurfmatcher.h  httpserver.h  requesthandler.h
lib/cplusplus/CudaSurfMatcher/src/: CudaSurfMatcher.cpp  RequestHandler.cpp  main.cpp
lib/cplusplus/SiftMatcher/: .gitignore  CMakeLists.txt  README.md  SiftMatcher.cpp  find_match
private/: .env.template  environmentVariables.md
spec/: spec_helper.rb
(+146 files in other folders)
