set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
cmake_minimum_required(VERSION 2.8)
project( SiftMatcher )
find_package( OpenCV REQUIRED )
find_package (Threads)
add_executable( SiftMatcher SiftMatcher.cpp )
target_link_libraries( SiftMatcher ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
